--- a/trunk/package/win32/doclib/hsp3str.htm
+++ b/trunk/package/win32/doclib/hsp3str.htm
@@ -771,13 +771,12 @@ DEF</pre>
 
 		<h2 id="FUNC">文字列操作関数</h2>
 		<p>
-			HSPには、文字列の検索をするためのinstr関数と、文字列の一部を取り出すためのstrmid関数が
-			標準で用意されています。
+			HSPには、文字列を便利に扱うための命令や関数がいくつか用意されています。
+			ここでは、検索をするためのinstr関数と、文字列の一部を取り出すためのstrmid関数を紹介します。
 			このドキュメントを読むと、同様の処理をpeek関数やpoke命令でも実現できることが
 			わかると思いますが、そこは当然最初から機能がサポートされていた方がいいに決まってますよね。
 		</p>
 		<p>
-			この2つの新しい命令は、単純ながら多くの場所で使える便利な命令です。
 			まず、strmid関数はだいたい以下のようになっています。
 		</p>
 		<pre class="quote">strmid(p1,p2,p3)         文字列の一部を取り出す
@@ -803,8 +802,8 @@ p3=0～(0)  : 取り出す文字数</pre>
 			「n1文字目からn2文字」は、<code>strmid( a,n1-1,n2 )</code>	になります。
 		</p>
 		<p>
-			もう1つ追加されたのは、文字列の中に、指定した文字列が含まれているかどうかを
-			調べるinstr関数です。これはヘルプでは、
+			もう1つは、文字列の中に、指定した文字列が含まれているかどうかを	調べる
+			instr関数です。これはヘルプでは、
 		</p>
 		<pre class="quote">instr(p1,p2,"string")        文字列の検索をする
 
@@ -826,6 +825,23 @@ p2=0～(0)  : 検索を始めるインデックス
 			この場合、検索の結果は調べ始めた場所からのインデックスが返されるということに
 			注意してください。文字列の最初からのインデックスではなくなります。
 		</p>
+		<p>
+			これ以外にも、以下のような機能が標準で用意されています。
+			詳しくは、それぞれの命令ヘルプを参照してみてください。
+		</p>
+		<table class="keywordlist" summary="文字列を扱う命令・関数を一覧形式で紹介しています。">
+		<caption>文字列を扱う命令・関数</caption>
+			<tr><th>キーワード</th><th>機能</th></tr>
+			<tr><td>getstr</td><td>バッファから文字列読み出し</td></tr>
+			<tr><td>getpath</td><td>パスの一部を取得</td></tr>
+			<tr><td>strf</td><td>書式付き文字列に変換</td></tr>
+			<tr><td>strtrim</td><td>指定した文字だけを取り除く</td></tr>
+			<tr><td>split</td><td>文字列から分割された要素を代入</td></tr>
+			<tr><td>cnvwtos</td><td>unicodeを通常文字列に変換</td></tr>
+			<tr><td>cnvstow</td><td>通常文字列をunicodeに変換</td></tr>
+		</table>
+
+
 
 
 		<h2 id="ABOUTJPN">日本語文字列のしくみ</h2>
