--- a/trunk/package/win32/doclib/update.htm
+++ b/trunk/package/win32/doclib/update.htm
@@ -16,12 +16,12 @@
 		<!-- ヘッダー -->
 		<p id="COPY">HSP : Hot Soup Processor ver3.2 / onion software 1997-2009(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
-		<h1>HSP3.1 アップデートガイド</h1>
+		<h1>HSP3.2 アップデートガイド</h1>
 
 		<!-- 目次 -->
 		<ol>
 			<li><a href="#INTRO">イントロダクション</a></li>
-			<li><a href="#DIFF30">HSP3.0との違いについて</a></li>
+			<li><a href="#DIFF31">HSP3.1との違いについて</a></li>
 			<li><a href="#DIFF2">HSP2との違いについて</a></li>
 			<li><a href="#SUMMARY">HSP3の概要</a>
 				<ol>
@@ -58,67 +58,73 @@
 		<!-- 本文 -->
 		<h2 id="INTRO">イントロダクション</h2>
 		<p>
-			HSP3.1は、HSP3.0に替わる新しいバージョンです。
+			HSP3.2は、HSP3.1に替わる新しいバージョンです。
 			しかしながら、HSP2からHSP3にあったような大幅な仕様の変更はなく、
 			あくまでも上位互換として動作する形で、各種機能が追加されています。
 		</p>
 		<p>
-			ここでは、HSP3.0とHSP3.1の違いについて。
+			ここでは、HSP3.2とHSP3.1の違いについて。
 			そして、HSP2.61とHSP3全般の違いについて解説していきます。
 		</p>
 
 
-		<h2 id="DIFF30">HSP3.0との違いについて</h2>
+		<h2 id="DIFF31">HSP3.1との違いについて</h2>
 		<p>
-			HSP3.0をすでに使っているユーザーは、特に意識することなくHSP3.1をお使いいただけるはずです。
-			HSP3.1では、それまでの機能を継承しながら、新たな要素を多数追加しています。
+			HSP3.1をすでに使っているユーザーは、特に意識することなくHSP3.2をお使いいただけるはずです。
+			HSP3.2では、それまでの機能を継承しながら、新たな要素を多数追加しています。
 		</p>
 		<p>
-			HSP3.1で追加変更された主要な項目は以下の通りです。
+			HSP3の詳細な更新履歴については、<a href="history.txt">こちら(history.txt)</a>を参照してください。
 		</p>
-		<ul>
-			<li>ヘルプ表示をhtmlレンダリングによる表示へ切り替えました</li>
-			<li>プリプロセッサ出力ファイル(hsptmp.i)を標準で生成しなくなりました</li>
-			<li>実数の表現として指数部のある形式を認識するようになりました</li>
-			<li>#constプリプロセッサ命令が実数演算に対応しました</li>
-			<li>ラベル型変数の機能を追加しました</li>
-			<li>標準のアイコンを256色のものに変更しました</li>
-			<li>かんたん入力(AHT)機能を追加しました</li>
-			<li>HSPスクリプトエディタのアドオン機能、SDKを追加しました</li>
-			<li>スクリプト自動生成ツール、「Peasエディタ」を追加しました</li>
-			<li>ブラウザ上での実行を支援するHSPLet機能を追加しました</li>
-			<li>HSPTVブラウザ上での実行テスト機能を追加しました</li>
-			<li>新規プラグインhspcv.dll、hspogg.dllの追加しました</li>
-			<li>プラグインhsp3imp.dllのマニュアルを追加しました</li>
-			<li>プラグインhgimg3、hspext、hspda、hspinetの修正・機能追加をしました</li>
-			<li>ユーザー作成プラグインEasy3D、hspdxfixを追加しました</li>
-			<li>ユーザー作成モジュールd3moduleを追加しました</li>
-		</ul>
 		<p>
-			HSP3.0で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.1で動作させることができます。
-			HSP3.1で修正が必要な項目は以下の通りです。
+			HSP3.1で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.2で動作させることができます。
+			HSP3.2で修正が必要な項目は以下の通りです。
 		</p>
 		<dl>
 			<dt>
-				#setmod命令の削除
+				新規追加キーワードの衝突
 			</dt>
 			<dd>
 				<p>
-					HSP3.1では、モジュール変数再設定のための命令、#setmodが削除されています。
-					この命令を使用しているスクリプトでは、修正が必要です。
-					お手数ですが、#setmodの代替となるモジュール変数設定のための
-					ユーザー定義命令を作成するようお願い致します。
+				HSP3.2では、新たに以下のキーワードが標準で定義されるようになりました。
+				</p>
+				<ul>
+				<li>ldim</li>
+				<li>newlab</li>
+				<li>resume</li>
+				<li>yield</li>
+				<li>split</li>
+				<li>strtrim</li>
+				<li>gradf</li>
+				<li>objimage</li>
+				<li>objskip</li>
+				<li>objenable</li>
+				<li>celload</li>
+				<li>celdiv</li>
+				<li>celput</li>
+				</ul>
+				<p>
+				これらの名称を変数名、命令定義、関数定義などで使用している場合、
+				エラーとなる場合があります。
+				新しいキーワードと衝突して、過去のスクリプトが動作しない場合は、
+				衝突しているキーワードを変更するか、#undef命令によりシステム定義を
+				一時的に無効とすることで動作させることができます。
 				</p>
 			</dd>
 			<dt>
-				#delmod命令の削除
+				ラベル型変数の仕様変更
 			</dt>
 			<dd>
 				<p>
-					HSP3.1では、モジュール変数削除のための命令、#delmodのパラメーターが
-					削除されています。#delmod命令で、パラメーターを指定しているスクリプトでは、
-					修正が必要です。お手数ですが、モジュール変数に通知するためのユーザー定義
-					命令を作成するようお願い致します。
+				ラベル型変数の動作が3.1と異なっています。
+				HSP3.1では、dimtypeによりラベル型変数を初期化した時に、何も代入を行なわない
+				場合でもgoto、gosub等で指定可能でした。(初期値はプログラム先頭として処理)
+				HSP3.2では、初期化時(何も代入を行なわない時)のラベル型変数は、goto、gosub等で
+				指定するとエラーとなります。
+				また、varuse関数によりラベルが代入されているか(有効なラベルが代入されているか)
+				を取得可能になっています。
+				ラベル型をより安全に使用するための変更となります。
+				既存のスクリプトがこの仕様変更により、動作しなくなる可能性は低いと思われます。
 				</p>
 			</dd>
 		</dl>
@@ -165,7 +171,7 @@
 
 		<h2 id="SUMMARY">HSP3の概要</h2>
 		<p>
-			HSP2を利用してきたユーザー向けに、HSP3.1の概要を紹介します。
+			HSP2を利用してきたユーザー向けに、HSP3.2の概要を紹介します。
 		</p>
 		<h3 id="SUMMARY_ENV">動作環境</h3>
 		<p>
@@ -208,7 +214,7 @@
 		<p>
 			HSP3.0では、これに加えてHTTPやFTPのネットワークアクセスに特化したHSPINETや、
 			高度な3D処理をサポートするHGIMG3を同梱しています。
-			HSP3.1では、さらに高度な画像処理に特化したプラグインHSPCVや、3Dゲーム作成で
+			HSP3.2では、さらに高度な画像処理に特化したプラグインHSPCVや、3Dゲーム作成で
 			評価の高いEasy3Dが同梱されています。
 		</p>
 
@@ -494,14 +500,14 @@
 		<pre>#include "hsp261cmp.as"		;ver2.61互換を有効にする</pre>
 		<p>
 			これは、commonフォルダに存在する「hsp261cmp.as」で定義されている
-			ver2.61互換マクロにより、3.0上で動作するよう適切な命令に変換するものです。
+			ver2.61互換マクロにより、3.0以降で動作するよう適切な命令に変換するものです。
 			ただし、現状のver2.61互換マクロは、β版でありすべての記述をサポートして
 			いるわけではありません。また、計算式の優先順位変更も行なわれません。
 			完全ではないものの、ある程度までのスクリプトであれば、そのまま3.0で
 			動作させることが可能です。
 		</p>
 		<p>
-			ver2.61互換マクロの設定以降には、ver3.0専用の命令及び定義ファイルなどを
+			ver2.61互換マクロの設定以降には、ver3.x専用の命令及び定義ファイルなどを
 			置かないように注意してください。
 		</p>
 
