--- a/trunk/package/win32/doclib/hsp3.htm
+++ b/trunk/package/win32/doclib/hsp3.htm
@@ -14,7 +14,7 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.2 / onion software 1997-2009(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.3 / onion software 1997-2011(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>HSP3 概要</h1>
 
@@ -80,8 +80,12 @@
 			<li>Microsoft Windows 2000、XP ( NT4.0以降を含む )、Vista、7</li>
 		</ul>
 		<p>
-			HSP3.2は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。
-			Microsoft Windows 95 上で動作させるためには、InternetExplorer4.0以降がインストールされている必要があります。
+			HSP3.3は32bitアプリケーションの動作するほぼすべてのWindowsで動作します。
+		</p>
+		<p>
+			Windows 98及びMe上では、「HSPスクリプトエディタ」は動作致しません。
+			HSP3.2までのエディタを使用するか、簡易版エディタ(hsed3le.exe)をご使用ください。
+			また、InternetExplorer4.0以降がインストールされているWindows 95上でも動作可能ですが、保証外となります。
 		</p>
 		<p>
 			Windows 7及びVistaの64bit(x64)版での動作を確認しています。
@@ -97,7 +101,7 @@
 
 		<h2 id="PACKAGE">パッケージ構成</h2>
 		<p>
-			HSP3.2フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
+			HSP3.3フルセットは、オープンソースとして公開されているOpenHSP技術をベースに、
 			Windows上で手軽にプログラミングを楽しむことができるよう構成されています。
 			スクリプトを記述するための「HSPスクリプトエディタ」を始めとして、
 			視覚的にプログラムの動作を確認することができるツール「Peas」、
@@ -107,18 +111,18 @@
 
 		<h2 id="INSTALL">インストール</h2>
 		<p>
-			HSP3.2フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
+			HSP3.3フルセットは、インストーラー付きのバージョンと圧縮ファイル版が用意されています。
 			インストーラーを起動するか、または任意のディレクトリにファイルを解凍する
 			ことで使用できるようになります。
 		</p>
 		<p>
-			HSP3.2以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
+			HSP3.3以前のバージョンが既にインストールされている場合は、以前のものをアンインストール
 			してから、新しいバージョンをインストールすることを推奨します。
-			ただし、HSP3.2のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
+			ただし、HSP3.3のインストーラーは、インストール先のフォルダ以外にファイルの追加を行ないませんので、
 			以前のバージョンと競合することはありません。(過去のバージョンと同時に利用することも可能です。)
 		</p>
 		<p>
-			Windows 2000やXP等では、HSP3.2のインストールフォルダに書き込み権限が必要になります。
+			Windows 2000以降(XP、Vista、7等)では、HSP3.3のインストールフォルダに書き込み権限が必要になります。
 			インストーラーのデフォルトディレクトリ(/HSP32)にインストールを行なった場合なども、
 			管理者権限を持ったユーザーで実行するようにしてください。
 		</p>
@@ -130,7 +134,7 @@
 
 		<h2 id="DEMO">デモンストレーション</h2>
 		<p>
-			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.2」→「サンプルデモ」
+			まず、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「サンプルデモ」
 			を起動させてみてください。HSPのサンプルデモが始まります。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HSP3DEMO.EXEを起動させてみてください。）
 		</p>
@@ -139,83 +143,18 @@
 			色々なデモンストレーションを見ることができます。
 		</p>
 		<p>
-			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.2」→「HSPアシスタント」
+			また、「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「HSPアシスタント」
 			を選択することで。HSPサンプルスクリプトを閲覧するための「HSPアシスタント」が起動します。
 			「HSPアシスタント」で、「Sample」のボタンを押してからファイルを選択するだけで、
 			すぐに実行・閲覧することができます。
 		</p>
 
-		<h2 id="CHANGE31">HSP3.1からの変更点</h2>
+		<h2 id="CHANGE31">HSP3.2からの変更点</h2>
 		<p>
-			HSP3.2では、上位互換となる形で機能の修正と追加を行なっています。
-			HSP3.1で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.2で動作させることができます。
+			HSP3.3では、上位互換となる形で機能の修正と追加を行なっています。
+			HSP3.2で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.3で動作させることができます。
 			詳しくは、<a href="update.htm">アップデートガイド</a>を参照してください。
 		</p>
-		<p>
-			HSP3.2フルセットでは、HSP3.1から主に以下の要素が追加されています。
-		</p>
-		<dl>
-			<dt>本体機能の拡充</dt>
-			<dd>
-				<p>
-					HSP3.1の利便性をさらに高めるため、多くの機能追加と不具合の修正を行なっています。
-					すべてのツール、ドキュメント、サンプルを見直すことで、より細かい要求に応えるものとなっています。
-					また、エラー表示の改善や、実行速度の向上も行なわれています。
-				</p>
-			</dd>
-			<dt>手軽に利用できる新機能</dt>
-			<dd>
-				<p>
-					HSP3.2では、標準命令を大幅に拡充しています。
-					いままで難しかった処理や、手間のかかる記述が効率化され、幅広い場面での利便性が向上します。
-					新機能として、2D物理エンジンを標準で同梱しており、多彩な動きや接触判定などの手間を軽減するほか、
-					グラフィック、文字列、配置オブジェクト、ラベル変数、プリプロセッサなどすべての項目に渡って拡張が行なわれています。
-					さらに、付属ツールの更新や新規ツール追加により、ソフトウェア製作をより強力にサポートします。
-				</p>
-			</dd>
-			<dt>充実したサンプルスクリプト</dt>
-			<dd>
-				<p>
-					新機能を使ったサンプルはもちろん、各種アプリケーションで必要なサンプルやモジュール、
-					さらに色々なジャンルのゲームに使用できる実践的なサンプルを数多く追加しています。
-					その数は、２５０種類以上に及びます。きっとあなたの目的に合ったサンプルが見つかるはずです。
-				</p>
-			</dd>
-			<dt>新しいヘルプマネージャー</dt>
-			<dd>
-				<p>
-					S.Programs氏製作によるHDL(HSP Document Library)を標準で内蔵しています。
-					ヘルプだけでなく、サンプルやドキュメントも含めて閲覧、検索をすることができます。
-					非常に多機能なブラウザにより、ヘルプの使い勝手も向上しています。
-				</p>
-			</dd>
-			<dt>強力な3Dプラグイン</dt>
-			<dd>
-				<p>
-					HSP3.2には、2つの強力な3Dプラグインが同梱されています。
-					新たに地形メッシュやコリジョン自動移動、カメラ自動制御などに対応したHGIMG3プラグイン。
-					そして、シェーダー対応により高機能、高速化されたEasy3Dプラグイン。
-					どちらも、最新の技術をHSPから手軽に呼び出し、3Dゲームや3Dアプリケーションを
-					構築することができます。
-				</p>
-			</dd>
-			<dt>新しいGUIサポート</dt>
-			<dd>
-				<p>
-					配置オブジェクトに関するサポートが拡張され、プラグインを使用することなく様々なGUIを利用することができます。
-					また、ボタンに画像を貼り付けたオリジナルのGUI構築のための機能も追加されています。
-					また、新しく追加されたllmod3モジュールでは、HSP2.61までの資産を引き継ぐ形で、システムやオブジェクト関連の多彩な機能をサポートします。
-				</p>
-			</dd>
-			<dt>HSPアシスタント機能</dt>
-			<dd>
-				<p>
-					新しい開発支援アクセサリ、「HSPアシスタント」が追加されています。
-					機能のカテゴリから、逆引きで命令を検索したり、パラメーターの入力支援や、ヘルプ参照を手軽に行なうことができます。
-					また、サンプルスクリプトの参照やネットワークからの素材ダウンロードなど便利な機能が満載です。
-				</p>
-			</dd>
-		</dl>
 
 		<h2 id="CHANGE2">HSP2からの変更点</h2>
 		<p>
@@ -249,7 +188,7 @@
 			HSPアシスタントにより、命令の検索、サンプルスクリプトの参照、ネットワーク素材取得などを行なうことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.2」→「HSPアシスタント」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「HSPアシスタント」
 			を選択することで、HSPアシスタントが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPAT.EXEを起動させてみてください。)
 		</p>
@@ -264,7 +203,7 @@
 			ダウンロードして楽しむことができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.2」→「HSPTVブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「HSPTVブラウザ」
 			を選択することで、HSPTVブラウザが起動されます。
 			(メニュー登録されていない場合は、展開されたディレクトリにある、HSPTV.EXEを起動させてみてください。)
 		</p>
@@ -283,7 +222,7 @@
 			スクリプトを自動的に生成することができます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.2」→「Peasエディタ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「Peasエディタ」
 			を選択することで、Peasエディタが起動されます。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、AHTMAN.EXEを起動させてみてください。）
 		</p>
@@ -300,7 +239,7 @@
 			統合的な検索とシームレスなリンクが行なわれ、スクリプトの開発効率を高めます。
 		</p>
 		<p>
-			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.2」→「ドキュメントブラウザ」
+			「スタートメニュー」のプログラムグループから「Hot Soup Processor 3.3」→「ドキュメントブラウザ」
 			を選択することで起動されます。
 			（メニュー登録されていない場合は、展開されたディレクトリにある、HDL.EXEを起動させてください。）
 		</p>
@@ -399,7 +338,7 @@
 
 		<h2 id="COPYRIGHT">著作権、ライセンスについて</h2>
 		<p>
-			HSP3.2フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
+			HSP3.3フルセットは、「HSP開発システム」と「追加コンポーネント」で構成された複合パッケージとなっています。
 			HSP開発システムは、開発の中心となる要素で以下の項目を指します。
 		</p>
 		<ul>
@@ -607,6 +546,9 @@
 		</p>
 		<p>
 			HSPUSBIOプラグインは、K-Kさんが製作されたものを同梱させていただきました。
+		</p>
+		<p>
+			USBIO操作DLL、hidmon.dllは、irukaさん・senshuさんが作成し公開されているものを同梱させていただきました。
 		</p>
 		<p>
 			llmod3モジュールは、tomさん、芝やんさんが開発したものを使用させて頂きました。
