--- a/trunk/package/win32/doclib/plugin.htm
+++ b/trunk/package/win32/doclib/plugin.htm
@@ -23,7 +23,7 @@
 
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY"><a id="top" class="head">HSP : Hot Soup Processor ver3.21 / onion software 1997-2010(c)</a></p>
+		<p id="COPY"><a id="top" class="head">HSP : Hot Soup Processor ver3.3 / onion software 1997-2011(c)</a></p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>拡張プラグイン・モジュール一覧</h1>
 
@@ -46,7 +46,8 @@
 					<li><a href="#HSPOGG">HSPOGG.DLL</a></li>
 					<li><a href="#HSPSOCK">HSPSOCK.DLL</a></li>
 					<li><a href="#HSPUSBIO">HSPUSBIO.DLL</a></li>
-					<li><a href="#HGIMG">HGIMG.DLL/HGIMGX.DLL</a></li>
+					<li><a href="#HSP3IMP">HSP3IMP.DLL</a></li>
+					<li><a href="#HSP3DISH">HSP3DISH.hrt</a></li>
 				</ol>
 			</li>
 			<li><a href="#MODULE">モジュール</a>
@@ -239,7 +240,7 @@
 			<tr>
 				<th width="20%">拡張プラグイン</th>
 				<th width="30%">OBAQ for HSP3</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:Zener Works, Inc./kuni/onitama</th>
 				<th width="20%"><a href="http://www.zener.co.jp/">作者のページ</a></th>
 			</tr>
@@ -645,6 +646,36 @@
 				</td>
 			</tr>
 		</table>
+		<h3 id="HSP3DISH">HSP3dish.hrt</h3>
+		<table summary="拡張ランタイムHSP3DISHの紹介です。" class="pluginlist">
+			<caption>HSP3dish.hrtの紹介</caption>
+			<tr>
+				<th width="20%">拡張ランタイム</th>
+				<th width="30%">HSP3dish.hrt</th>
+				<th width="5%">Ver3.3</th>
+				<th width="25%">作者:おにたま</th>
+				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
+			</tr>
+			<tr>
+				<td colspan="5">
+					<p>
+						HSP3Dishは、HSP3の動作環境を様々なデバイス上で構築するための追加セットです。
+						Windows上で開発したスクリプトを、別なOS上で動作させるための仕組みを提供します。
+						HSP3dish.hrtランタイムにより、他のデバイス上で動作させる環境に近い動作(エミュレーション)を行なうことができます。
+					</p>
+					<p>
+						HSP3Dishでは、多くの命令や関数などを通常のHSP3と同様に使用できますが、
+						環境の違いを吸収するために、機能が制限されており、Windows版に慣れた
+						人には面倒な部分もあるかもしれません。今後のバージョンでは、
+						Windows版との違いを意識することなく、幅広い環境に適用させることを
+						目標としています。
+					</p>
+					<p>
+						詳しくは、別途ドキュメント「<a href="hsp3dish.txt">hsp3dish.txt</a>」を参照してください。
+					</p>
+				</td>
+			</tr>
+		</table>
 
 		<h3 id="SQLele">SQLele</h3>
 		<table summary="拡張モジュールSQLeleの紹介です。" class="pluginlist">
@@ -684,7 +715,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">llmod3</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:tom/芝やん/OpenHSP</th>
 				<th width="20%"><a href="http://www.s-software.net/">作者のページ</a></th>
 			</tr>
@@ -727,7 +758,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">hsp3util.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:おにたま</th>
 				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
 			</tr>
@@ -775,7 +806,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">form_decode.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:おにたま</th>
 				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
 			</tr>
@@ -797,7 +828,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">mod_getenv.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:おにたま</th>
 				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
 			</tr>
@@ -819,7 +850,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">mod_img.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:おにたま</th>
 				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
 			</tr>
@@ -842,7 +873,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">hspmath.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:おにたま</th>
 				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
 			</tr>
@@ -864,7 +895,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">mod_fontdlg.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:おにたま</th>
 				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
 			</tr>
@@ -886,7 +917,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">mod_aht.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:おにたま</th>
 				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
 			</tr>
@@ -908,7 +939,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">mod_joystick.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:MIA</th>
 				<th width="20%"><a href="http://taillove.jp/mia/">作者のページ</a></th>
 			</tr>
@@ -930,7 +961,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">mod_menu.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:HSPWiKi</th>
 				<th width="20%"><a href="http://quasiquote.org/hspwiki/">作者のページ</a></th>
 			</tr>
@@ -952,7 +983,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">mod_picfont.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:おにたま</th>
 				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
 			</tr>
@@ -975,7 +1006,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">mod_rss.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:おにたま</th>
 				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
 			</tr>
@@ -997,7 +1028,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">mod_stbar.as</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:おにたま</th>
 				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
 			</tr>
@@ -1018,7 +1049,7 @@
 			<tr>
 				<th width="20%">拡張モジュール</th>
 				<th width="30%">Win32API定義</th>
-				<th width="5%">Ver3.2</th>
+				<th width="5%">Ver3.3</th>
 				<th width="25%">作者:sakura/おにたま</th>
 				<th width="20%"><a href="http://www.onionsoft.net/">作者のページ</a></th>
 			</tr>
