--- a/trunk/package/win32/doclib/update.htm
+++ b/trunk/package/win32/doclib/update.htm
@@ -14,14 +14,14 @@
 <body>
 	<div id="CONTAINER">
 		<!-- ヘッダー -->
-		<p id="COPY">HSP : Hot Soup Processor ver3.2 / onion software 1997-2009(c)</p>
+		<p id="COPY">HSP : Hot Soup Processor ver3.3 / onion software 1997-2011(c)</p>
 		<img src="hsp3ttl.jpg" alt="タイトル" width="640" height="200">
 		<h1>HSP3.21 アップデートガイド</h1>
 
 		<!-- 目次 -->
 		<ol>
 			<li><a href="#INTRO">イントロダクション</a></li>
-			<li><a href="#DIFF32">HSP3.21の変更点について</a></li>
+			<li><a href="#DIFF32">HSP3.3の変更点について</a></li>
 			<li><a href="#DIFF31">HSP3.1との違いについて</a></li>
 			<li><a href="#DIFF2">HSP2との違いについて</a></li>
 			<li><a href="#SUMMARY">HSP3の概要</a>
@@ -59,55 +59,39 @@
 		<!-- 本文 -->
 		<h2 id="INTRO">イントロダクション</h2>
 		<p>
-			HSP3.2は、HSP3.1に替わる新しいバージョンです。
+			HSP3.3は、HSP3.1に替わる新しいバージョンです。
 			しかしながら、HSP2からHSP3にあったような大幅な仕様の変更はなく、
 			あくまでも上位互換として動作する形で、各種機能が追加されています。
 		</p>
 		<p>
-			ここでは、HSP3.2とHSP3.1及びHSP3.21の違いについて。
+			ここでは、HSP3.3とHSP3.2、HSP3.21の違いについて。
 			そして、HSP2.61とHSP3全般の違いについて解説していきます。
 		</p>
 
 
-		<h2 id="DIFF32">HSP3.21の変更点について</h2>
+		<h2 id="DIFF32">HSP3.3の変更点について</h2>
 		<p>
-			HSP3.21は、HSP3.2のマイナーアップデートバージョンです。
-			HSP3.21では64bit版Windowsへの対応などいくつかの点で不具合を修正していますが、仕様的に大きな変更はありません。
-			HSP3.2をすでに使っているユーザーは、特に意識することなくHSP3.21をお使いいただけるはずです。
+			HSP3.3は、HSP3.2のマイナーアップデートバージョンです。
+			HSP3.2をすでに使っているユーザーは、特に意識することなくHSP3.3をお使いいただけるはずです。
 		</p>
 		<p>
 			HSP3の詳細な更新履歴については、<a href="history.txt">こちら(history.txt)</a>を参照してください。
 		</p>
 		<p>
-			HSP3.21でHSP3.2から追加変更された主要な項目は以下の通りです。
+			HSP3.3でHSP3.2から追加変更された主要な項目は以下の通りです。
 		</p>
 		<p>
 		<UL>
-		<LI>Windows Vista及びWindows 7の64bit(x64)版でウィンドウが閉じなくなる不具合を修正しました
-		<LI>HGIMG3でメモリのリークがある不具合を修正しました
-		<LI>HGIMG3上でOBAQプラグインのオブジェクト描画に対応しました
-		<LI>HGIMG3で線描画、エミッター機能などいくつかの拡張を行ないました
-		<LI>OBAQプラグイン用の簡易モデル作成ツールを追加しました
-		<LI>hspinetプラグインで文字コード変換、RC4/BASE64/JSONサポートを追加しました
-		<LI>hspinetプラグインサンプルにメール送信、Twitter投稿などのスクリプトを追加しました
-		<LI>sprocketさん製作のArtlet2D,SQLeleモジュールを標準で同梱しました
-		<LI>K-Kさん製作のHSPUSBIOプラグイン・モジュールを標準で同梱しました
+		<LI>HSPスクリプトエディタのエディタエンジン(Footy2)を更新し、表示や操作面の改善を行ないました
+		<LI>スクリプト実行速度を10～20%程度改善しています
+		<LI>USB機器のコントロールに関するプラグイン、モジュールを同梱しています
+		<LI>HGIMG3にある不具合のいくつかを修正しました
+		<LI>HSP3dishランタイムを同梱しています
+		<LI>おちゃっこさん製作のEasy3Dプラグインを更新しました
 		</UL>
 		</p>
 
 
-		<h2 id="DIFF31">HSP3.1との違いについて</h2>
-		<p>
-			HSP3.1をすでに使っているユーザーは、特に意識することなくHSP3.2をお使いいただけるはずです。
-			HSP3.2では、それまでの機能を継承しながら、新たな要素を多数追加しています。
-		</p>
-		<p>
-			HSP3の詳細な更新履歴については、<a href="history.txt">こちら(history.txt)</a>を参照してください。
-		</p>
-		<p>
-			HSP3.1で動作していたスクリプトは、ほとんどの場合、修正することなくHSP3.2で動作させることができます。
-			HSP3.2で修正が必要な項目は以下の通りです。
-		</p>
 		<dl>
 			<dt>
 				新規追加キーワードの衝突
